--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <!-- <meta name="theme-color" content="#000000" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
+      crossorigin="anonymous"
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
     />
-    <title>Student Dashbaord</title>
+    <title>Student Dashboard</title>
   </head>
 
   <body>
