--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
     />
-    <title>Student Dashboard</title>
+    <title>Student | Dashboard</title>
   </head>
 
   <body>
